# uk-energy

./: .gitignore  Makefile  PHASE1_COMPLETE.md  README.md  SUMMARY.md  pyproject.toml
data/processed/: dukes_processed.csv  wri_gb_plants.csv
data/reference/: dno_regions.json  fuel_type_mapping.json  gsp_groups.json  interconnectors.json
notebooks/: 01_data_exploration.ipynb  02_plant_reconciliation.ipynb  03_grid_topology.ipynb  04_capacity_analysis.ipynb
src/uk_energy/: __init__.py  __main__.py  cli.py  config.py
src/uk_energy/dashboard/: __init__.py  app.py  data.py  layouts.py  theme.py
src/uk_energy/dashboard/pages/: explorer.py  generation.py  overview.py  regional.py
src/uk_energy/graph/: __init__.py  builder.py  export.py  model.py  topology.py
src/uk_energy/ingest/: __init__.py  _http.py  bmrs.py  carbon_intensity.py  dukes.py  interconnectors.py  neso.py  osm.py  osuked.py  repd.py  wri.py
src/uk_energy/reconcile/: __init__.py  geocoder.py  plant_matcher.py
src/uk_energy/timeseries/: __init__.py  bmrs_live.py  carbon_intensity.py  ingest.py  store.py  weather.py
src/uk_energy/viz/: __init__.py  map.py  network.py
