[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uk-energy"
version = "0.1.0"
description = "Quant-grade UK energy system modelling: data ingestion, entity reconciliation, and grid graph construction"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "uk-energy project" }]

dependencies = [
    "httpx[http2]>=0.27",
    "pandas>=2.2",
    "geopandas>=0.14",
    "networkx>=3.3",
    "folium>=0.16",
    "plotly>=5.20",
    "shapely>=2.0",
    "openpyxl>=3.1",
    "requests>=2.31",
    "tqdm>=4.66",
    "pydantic>=2.6",
    "pyarrow>=15.0",
    "rapidfuzz>=3.6",
    "tenacity>=8.2",
    "loguru>=0.7",
    "click>=8.1",
    "python-dateutil>=2.9",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
uk-energy = "uk_energy.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uk_energy = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
